# squashfs

./: README.md  main.py  pyproject.toml
.github/workflows/: build.yml
squashfs/: __main__.py  common.py  dentry.py  file.py  fragment.py  image.py  info.py  inode.py  superblock.py
tests/: test_basic.py  test_basic.sfs  test_file.py  test_file.sfs  test_xattr.sfs  test_xattr2.sfs  test_xattrs.py
