[tool.poetry]
name = "squashfs"
version = "0.1.0"
description = "A pure Python implementation of SquashFS"
authors = ["Keichi Takahashi <hello@keichi.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
