[tool.poetry]
name = "squashfs"
version = "0.1.0"
description = "A pure Python implementation of SquashFS"
authors = ["Keichi Takahashi <hello@keichi.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
